fix road interactability on iphone, or rather desired lack thereof, and made white dashed lines shifting from road to road

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -315,6 +315,13 @@ a[href^="mailto:"] {
                 inset 0 -1px 2px rgba(0,0,0,0.2);
     transform: translateZ(0);
     backface-visibility: hidden;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
 
     &::after {
         content: '';
@@ -323,15 +330,43 @@ a[href^="mailto:"] {
         left: 0;
         right: 0;
         height: 2px;
-        background-image: linear-gradient(
-            to right,
-            white 20px,
-            transparent 20px 40px
-        );
+        background-image: linear-gradient(to right, #fff 20px, transparent 20px 40px);
         background-size: 40px 100%;
         transform: translateY(-50%);
         will-change: transform;
+        pointer-events: none;
     }
+
+    // Sequential offsets for each road
+    &:nth-child(1)::after {
+        background-position: 0px 0;
+    }
+    
+    &:nth-child(2)::after {
+        background-position: 10px 0;
+    }
+    
+    &:nth-child(3)::after {
+        background-position: 20px 0;
+    }
+    
+    &:nth-child(4)::after {
+        background-position: 30px 0;
+    }
+}
+
+.road-lines {
+    position: absolute;
+    top: 25%;
+    left: 0;
+    right: 0;
+    height: 2px;
+    background-image: linear-gradient(to right, #fff 20px, transparent 20px 40px);
+    background-size: 40px 100%;
+    transform: translateY(-50%);
+    will-change: transform;
+    pointer-events: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 // Slider Input Styles
@@ -368,6 +403,14 @@ a[href^="mailto:"] {
         opacity: 0;
         touch-action: none;
     }
+
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 // Time Label
@@ -1092,4 +1135,20 @@ a[href^="mailto:"] {
             }
         }
     }
+}
+
+.volume-slider-container .road::after {
+    background-position: 0px 0;
+}
+
+.speed-slider-container .road::after {
+    background-position: 10px 0;
+}
+
+.reverb-slider-container .road::after {
+    background-position: 20px 0;
+}
+
+.time-slider-container .road::after {
+    background-position: 30px 0;
 }
